kustomize_web/cryptochords-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptochords-web
  labels:
    app: cryptochords-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cryptochords-web
  template:
    metadata:
      labels:
        app: cryptochords-web
    spec:
      containers:
      - name: cryptochords-web
        image: hemilabs/cryptochords-web:1.0.0
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret
