kustomize_web/cryptochords-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cryptochords-web-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  rules:
  - host: cryptochords.web.hemi.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cryptochords-web-service
            port:
              number: 80
